# sygus-parser-rs

./: .gitattribute  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  cargo-aidoc.toml
src/: lib.rs  main.rs  writer.rs
src/api/: cmds.rs  inspect_terms.rs  mod.rs  sorts.rs  terms.rs
src/ast/: cmds.rs  commands.rs  mod.rs  sexpr.rs  sorts.rs  terms.rs  utils.rs
src/parser/: error.rs  mod.rs  sygus.v2.pest
tests/: define-sort-test.sl  forall.sl  hd-01.sl  hd-22.sl  synth.sl
