[package]
name = "sygus-parser"
version = "0.1.0"
edition = "2021"
authors = ["Chentian Wu <wuc9521@gmail.com>"]
description = "A Rust parser for the SyGuS format"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.3"
pest_derive = "2.7.3"
itertools = "0.11.0"
clap = { version = "4.4", features = ["derive"] }