[package]
authors = ["Chentian Wu <wuc9521@gmail.com>"]
description = "A Rust parser for the SyGuS format"
edition = "2021"
license = "MIT"
name = "sygus-parser"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4", features = ["derive"]}
derive_more = { version = "2.1.1", features = ["display"] }
env_logger = "0.11.3"
itertools = "0.11.0"
log = "0.4.20"
pest = "2.8.1"
pest_derive = "2.8.1"
